--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 .portada{
-    background: url(/img/ba1.jpg);
+    background: url(/integrador-codo-a-codo/img/ba1.jpg);
     background-size: cover;
     background-position: center;
     width: 100%;
